[project]
name = "raimonda"
description = "A simple to use, configurable Blackjack simulator, written in Python."
version = "0.1.0"
authors = [
    { name = "Umut Seven", email = "umutseven92@gmail.com" }
]

[project.urls]
"Homepage" = "https://github.com/umutseven92/raimonda"
"Bug Reports" = "https://github.com/umutseven92/raimonda/issues"
"Source" = "https://github.com/umutseven92/raimonda"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"